--- a/dockerfiles/Complex/.travis.yml
+++ b/dockerfiles/Complex/.travis.yml
@@ -14,7 +14,7 @@ after_sucess:
   - docker build -t rmduran65/multi-server ./server
   - docker build -t rmduran65/multi-worker ./worker
   # Log in the docker CLI
-  - echos "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
   # Take those images and push them to docker hub
   - docker push rmduran65/multi-client
   - docker push rmduran65/multi-nginx
