--- a/dockerfiles/Complex/.travis.yml
+++ b/dockerfiles/Complex/.travis.yml
@@ -1,11 +1,7 @@
-
-language: minimal
+language: generic
 
 sudo: required
 
-services:
-  - docker
-  
 before_install:
   - docker build -t rmduran65/mul-doc -f ./client/dockerfile.dev ./client
   
