--- a/dockerfiles/Complex/.travis.yml
+++ b/dockerfiles/Complex/.travis.yml
@@ -1,5 +1,12 @@
-language: generic
+language: python
+python:
+  - "3.5"
 
+sudo: required
+
+services:
+  - docker
+  
 before_install:
   - docker build -t rmduran65/mul-doc -f ./client/dockerfile.dev ./client
   
